Created markdown version

--- a/Extract/projects.yaml
+++ b/Extract/projects.yaml
@@ -1,448 +1,613 @@
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19896
+  Location: ''
   Num: 1
+  Preference: ''
+  Summary: ''
   Title: SPORTS TECH EXPLORERS - The Future of Sport, Entertainment, Gaming & Entertainment
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19892
+  Location: ''
   Num: 2
+  Preference: ''
+  Summary: ''
   Title: Friend in my Pocket - mental health app for youth
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19889
+  Location: ''
   Num: 3
+  Preference: ''
+  Summary: ''
   Title: Playground MTP(Micro Targeting Platform)
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19881
+  Location: ''
   Num: 4
+  Preference: ''
+  Summary: ''
   Title: EntreMAP2 - Survey / Team Management
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19886
+  Location: ''
   Num: 5
+  Preference: ''
+  Summary: ''
   Title: React native + js app accessibility (lead gen and msite launch)
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19888
+  Location: ''
   Num: 6
+  Preference: ''
+  Summary: ''
   Title: Construction Contracts - Moodle LMS Integration
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19887
+  Location: ''
   Num: 7
+  Preference: ''
+  Summary: ''
   Title: Construction Contracts - ChapGPT Integration
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19877
+  Location: ''
   Num: 8
+  Preference: ''
+  Summary: ''
   Title: PontiNet  - Clinical decision making assistant for Primary Care Doctors
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19804
+  Location: ''
   Num: 9
+  Preference: ''
+  Summary: ''
   Title: Myra 3D Simulation
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19873
+  Location: ''
   Num: 10
+  Preference: ''
+  Summary: ''
   Title: Development of an integrated performance center dashboard to track and visualize
     all activities in the core shed pertaining to geological drill cores
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19872
+  Location: ''
   Num: 11
+  Preference: ''
+  Summary: ''
   Title: Social Media Manager App for GeoDesk
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19871
+  Location: ''
   Num: 12
+  Preference: ''
+  Summary: ''
   Title: Build an Interactive Timeline feature in GeoDesk
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19868
+  Location: ''
   Num: 13
+  Preference: ''
+  Summary: ''
   Title: "\xE2\u20AC\u0153OnCountry\"-A web platform designed to assist Australian\
     \ First Nations peoples in managing native title negotiations"
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19867
+  Location: ''
   Num: 14
+  Preference: ''
+  Summary: ''
   Title: 'ESGMetrics: Empowering Organizations for Effective ESG Performance Measurement
     and Analysis'
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19864
+  Location: ''
   Num: 15
+  Preference: ''
+  Summary: ''
   Title: GUI for PyGSLIB and integrating into GeoDesk
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19866
+  Location: ''
   Num: 16
+  Preference: ''
+  Summary: ''
   Title: Build an Automapper feature for GeoDesk
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19863
+  Location: ''
   Num: 17
+  Preference: ''
+  Summary: ''
   Title: App for GeoDesk-Three-Dimensional Implicit Structural Modeling
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19836
+  Location: ''
   Num: 18
+  Preference: ''
+  Summary: ''
   Title: Biosecurity Awareness
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19835
+  Location: ''
   Num: 19
+  Preference: ''
+  Summary: ''
   Title: Environmental Awareness (AVIRO)
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19841
+  Location: ''
   Num: 20
+  Preference: ''
+  Summary: ''
   Title: Scope a High Load Transport Route XR Training Aid
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19834
+  Location: ''
   Num: 21
+  Preference: ''
+  Summary: ''
   Title: Wet Tropics - World Heritage
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19843
+  Location: ''
   Num: 22
+  Preference: ''
+  Summary: ''
   Title: Enhance Ringo App's UX/UI over a series of sprints
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19832
+  Location: ''
   Num: 23
+  Preference: ''
+  Summary: ''
   Title: Monitoring and logging for QUT's Azure Labs Solution
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19845
+  Location: ''
   Num: 24
+  Preference: ''
+  Summary: ''
   Title: IntrepidUs
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19846
+  Location: ''
   Num: 25
+  Preference: ''
+  Summary: ''
   Title: Fishing App
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19828
+  Location: ''
   Num: 26
+  Preference: ''
+  Summary: ''
   Title: Development of a sugarcane consignment application suite for the Queensland
     sugar industry
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19847
+  Location: ''
   Num: 27
+  Preference: ''
+  Summary: ''
   Title: Enviro Fish Inc website
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19823
+  Location: ''
   Num: 28
+  Preference: ''
+  Summary: ''
   Title: Virtual mirror
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19833
+  Location: ''
   Num: 29
+  Preference: ''
+  Summary: ''
   Title: Cultural Heritage Field Induction
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19815
+  Location: ''
   Num: 30
+  Preference: ''
+  Summary: ''
   Title: Environmental Apiculture platform  Plug-in Development
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19849
+  Location: ''
   Num: 31
+  Preference: ''
+  Summary: ''
   Title: Poly Portal - A web portal for our 3D assets
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19814
+  Location: ''
   Num: 32
+  Preference: ''
+  Summary: ''
   Title: "Environmental Apiculture Platform \xE2\u20AC\u201C Inspection System"
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19811
+  Location: ''
   Num: 33
+  Preference: ''
+  Summary: ''
   Title: Design and build a new database and accompanying environment for specialist
     investigative training across multiple courses.
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19842
+  Location: ''
   Num: 34
+  Preference: ''
+  Summary: ''
   Title: Safety Heroes Reimagined for High School Audience
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19831
+  Location: ''
   Num: 35
+  Preference: ''
+  Summary: ''
   Title: Automated provisioning of Azure Labs Services for Academics
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19813
+  Location: ''
   Num: 36
+  Preference: ''
+  Summary: ''
   Title: Wediate's app development
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19853
+  Location: ''
   Num: 37
+  Preference: ''
+  Summary: ''
   Title: Queensland Reds Player Review Project
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19812
+  Location: ''
   Num: 38
+  Preference: ''
+  Summary: ''
   Title: Catalogue Service App Development
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19883
+  Location: ''
   Num: 39
+  Preference: ''
+  Summary: ''
   Title: EntreMAP - Social Media Features
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19810
+  Location: ''
   Num: 40
+  Preference: ''
+  Summary: ''
   Title: Development of the Training Contract Connect APP for the VET Sector
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19809
+  Location: ''
   Num: 41
+  Preference: ''
+  Summary: ''
   Title: Member Journey
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19808
+  Location: ''
   Num: 42
+  Preference: ''
+  Summary: ''
   Title: My Weekly Dash
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19876
+  Location: ''
   Num: 43
+  Preference: ''
+  Summary: ''
   Title: Business Ready Trades Project
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19807
+  Location: ''
   Num: 44
+  Preference: ''
+  Summary: ''
   Title: Virtual Reality burr hole craniotomy training module
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19805
+  Location: ''
   Num: 45
+  Preference: ''
+  Summary: ''
   Title: Interaction between IoT security devices, CRM, and 3rd party services
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19802
+  Location: ''
   Num: 46
+  Preference: ''
+  Summary: ''
   Title: Building A Knowledge Graph for Healthcare
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19801
+  Location: ''
   Num: 47
+  Preference: ''
+  Summary: ''
   Title: Free Native Plants Program Gamification
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19875
+  Location: ''
   Num: 48
+  Preference: ''
+  Summary: ''
   Title: Integration of ChatGPT app to GeoDesk Plugin
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19799
+  Location: ''
   Num: 49
+  Preference: ''
+  Summary: ''
   Title: POC Data privacy storage and encryption website
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19798
+  Location: ''
   Num: 50
+  Preference: ''
+  Summary: ''
   Title: Moodle course catalog
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19870
+  Location: ''
   Num: 51
+  Preference: ''
+  Summary: ''
   Title: Vulnerability Tracker for Open-source Projects
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19869
+  Location: ''
   Num: 52
+  Preference: ''
+  Summary: ''
   Title: Build PandasGUI Integration App for GeoDesk is designed to provide users
     with a seamless experience for interrogating and analyzing geochemical data using
     the popular PandasGUI library
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19874
+  Location: ''
   Num: 53
+  Preference: ''
+  Summary: ''
   Title: Integrating the Frappe accounting software into the Geodesk platform using
     Python
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19885
+  Location: ''
   Num: 54
+  Preference: ''
+  Summary: ''
   Title: The Mindset Academy Teams
 - Comments:
-  - Attribute1: ''
-    Attribute2: ''
-    Attribute3: ''
-    Attribute4: ''
+  - Chelsey: ''
+    James: ''
+    Ryan: ''
+    Xavier: ''
   Link: https://inplace.qut.edu.au/student/opportunity/19797
+  Location: ''
   Num: 55
+  Preference: ''
+  Summary: ''
   Title: Be Ready App
